Sat Jul 28 19:58:11 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>
 - drivers/megatec.c: battery values for 72V UPS.

Sat Jul 28 16:38:43 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - data/driver.list, drivers/belkin-hid.c, scripts/hotplug/libhid.usermap,
   scripts/udev/nut-usbups.rules.in: Add Belkin F6C1200-UNV (older model)
   to supported devices.

Thu Jul 26 19:45:12 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - clients/upsmon.c: only change the polling frequency if the OL/OB state
   changes (code cleanup, not a functional change)

Sun Jul 22 19:18:08 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: likewise we probably shouldn't check for FD_ISSET
   either if we already know the client was disconnected.

Sun Jul 22 19:11:05 UTC 2007 / Arjen de Korte <arjen@de-korte.org>

 - server/upsd.c: don't call FD_SET in the mainloop for clients we
   already know are no longer connected.

Wed Jul 11 03:18:44 UTC 2007 / Charles Lepple <clepple@gmail.com>

 - scripts/misc: Added bash completion script for 'upsc'.

Tue Jul 10 23:57:50 UTC 2007 / Carlos Rodrigues <carlos.efr@mail.telepac.pt>

 - data/driver.list: UPSonic CXR1000 supported by megatec

Tue Jul 10 21:10:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Changed Driver version to 0.12 and included a small TODO list in the bcmxcp.c

Tue Jul 10 13:47:01 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - lib/libupsclient.pc.in, lib/libupsclient-config.in: fix a typo
   (missing "LIB" prefix on the SSL_*FLAGS)

Mon Jul  9 19:45:20 UTC 2007 / Kjell Claesson <kjell.claesson@epost.tidanet.se>

 - Patch from Oliver Wilcock.
   bcmxcp.c modified to control individual load segments (outlet.2.shutdown.return) on Powerware PW5125.

Fri Jul  6 14:28:01 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>

 - data/drivers.list: fix some separators

Thu Jul  5 12:48:39 UTC 2007 / Arnaud Quette <aquette.dev@gmail.com>
